# deerflow-lite

./: .env.example  .gitignore  pyproject.toml  readme.md
app/: __init__.py
app/agents/: __init__.py  common.py  lead_agent.py  local_model.py  orchestrator.py  research_agent.py  writer_agent.py
app/cli/: __init__.py  main.py
app/config/: settings.py
app/rag/: __init__.py  embeddings.py  loaders.py  retriever.py  splitter.py  vectorstore.py
app/subagents/: builtins.py  executor.py  registry.py  rendering.py  runner.py
app/tools/: __init__.py  file_ops.py  langchain_toolset.py  python_exec.py  reporting.py  retrieval.py  task_tool.py  web_search.py
app/workflows/: __init__.py  run_task.py
docs/: 01-product-and-scope.md  02-architecture-and-runtime.md  03-agent-and-tool-contracts.md  04-implementation-plan.md  05-testing-and-acceptance.md  06-documentation-governance.md  07-roadmap-and-progress.md  08-codebase-map.md
tests/: test_file_ops.py  test_langchain_tool_execution.py  test_langchain_toolset.py  test_orchestrator.py  test_reporting_helpers.py  test_reporting_tool.py  test_retrieval.py  test_state.py  test_subagent_executor.py  test_subagent_registry.py  test_task_tool.py  test_workflow.py  test_workspace.py
